@@ -14,6 +14,13 @@ namespace VM
 		/// \param obj Object.
 		Program(const Object& obj);
 
+		/// \brief Construct empty program.
+		/// \param env Environment.
+		Program(Environment &env)
+			:m_Env(env)
+		{
+		}
+
 		/// \brief Construct program from file.
 		/// \param env Environment.
 		/// \param fn File name.
@@ -29,9 +36,15 @@ namespace VM
 		/// \brief Get ADF.
 		/// \param num Number of ADF.
 		/// \return ADF.
-		Object GetADF(int num) const {return adfs[num];}
+		Object GetADF(int num) const {return m_ADFs[num];}
+
+		/// \brief Set ADF.
+		/// \param num Number of ADF.
+		/// \param obj Source of ADF.
+		void SetADF(int num, const Object& obj);
 	private:
-		std::vector<Object> adfs; ///< List of ADFs in program;
+		std::vector<Object> m_ADFs; ///< List of ADFs in program.
+		Environment &m_Env; ///< Environment.
 	};
 }
 
